--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,4 @@
-USER_NAME=""
-PASSWORD=""
+USER_NAME="this is username"
+PASSWORD="this is password"
+BASE_URL="link end by/"
+PROJECTS="project1,project2,project3"
